WebCore/wml/WMLDoElement.cpp
@@ -113,8 +113,6 @@ void WMLDoElement::insertedIntoDocument()
         m_name = m_type;
 
     Node* parent = parentNode();
-    ASSERT(parent);
-
     if (!parent || !parent->isWMLElement())
         return;
 
@@ -125,7 +123,6 @@ void WMLDoElement::insertedIntoDocument()
 void WMLDoElement::removedFromDocument()
 {
     Node* parent = parentNode();
-    ASSERT(parent);
 
     if (parent  && parent->isWMLElement()) {
         if (WMLEventHandlingElement* eventHandlingElement = toWMLEventHandlingElement(static_cast<WMLElement*>(parent)))
