WebCore/wml/WMLNoopElement.cpp
@@ -45,8 +45,6 @@ void WMLNoopElement::insertedIntoDocument()
     WMLElement::insertedIntoDocument();
 
     Node* parent = parentNode();
-    ASSERT(parent);
-
     if (!parent || !parent->isWMLElement())
         return;
 
